# seil

./: .gitignore  Cargo.toml  README.md
src/: Progess.md  lexer.rs  lib.rs  main.rs  parser.rs  texteditor.rs  welcome.rs
src/crates/: compiler.rs  compileroptimisation.rs  custom_themes.rs  iitbcpu.rs  pipelinedregisters.rs
src/queries/: highlights.scm
src/test/: test.asm
