[package]
name = "iitb-cpu"
authors = ["Saurabh Kumar <saurabhkumarnomeas@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.38.0"

# Set some conf such as allow dead code and allow unused variables for entire project
[profile.dev]
opt-level = 0
debug = true
allow-dead-code = true
