[package]
name = "iitb-cpu"
version = "0.1.0"
authors = ["Saurabh Kumar <saurabhkumarnomeas@gmail.com>"]
edition = "2021"

[dependencies]

tokio = {version = "1.0.1", features = ["fs", "rt"]}
iced = {git = "https://github.com/iced-rs/iced.git", rev = "refs/tags/text-editor", features=["debug", "canvas", "highlighter"]}
rfd = {version ="*" }
iced_core = "*"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"

# Set some conf such as allow dead code and allow unused variables for entire project
[profile.dev]
opt-level = 0
debug = true
allow-dead-code = true
